# scrapple

./: Procfile  README.md  app.py  fly.toml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: keep-alive.yml
data/: employees.csv  parks.json
examples/: quickstart.py
scrapple/: __init__.py  parks.py  yoyodyne.py
scrapple/templates/: about.html  base.html  index.html  park_detail.html  parks.html  staff.html  staff_detail.html
templates/: about.html  awards.html  base.html  index.html  park_detail.html  parks.html  staff.html  staff_detail.html
